[metadata]
name = garden-party
author = osamabinloggin
author_email = osamabinloggin@gmail.com
url = 'https://garden-party.readthedocs.io/'
version = attr: garden_party.__version__
long_description = file: README.rst

[options]
packages = find:
install_requires =
   attrs >= 17.4.0
   click >= 6.7
   supervisor >= 4.0.0.dev0
dependency_links =
   git+https://github.com/supervisor/supervisor.git#egg=supervisor-4.0.0.dev0

[options.entry_points]
console_scripts =
   garden-party = garden_party.cli:cli
